Makiko Branch Fixed carrousel and contact alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,9 @@
-.container{
-    border: black solid 5px;
+.container {
+  border: black solid 5px;
+}
+
+.d-block {
+  margin: 0 auto;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
